Fix tests to use their own db

--- a/static/index.html
+++ b/static/index.html
@@ -69,7 +69,7 @@
 <div class="card" style="width: 100%;">
   <div class="card-body">
     <h5 class="card-title">Downloads</h5>
-    <p class="card-text">Please find downloads below.</p>
+    <p class="card-text">Please find provided downloads below.</p>
     <p class="card-text">
       <ul>
 
@@ -87,10 +87,10 @@
 
 <div class="card" style="width: 100%;">
   <div class="card-body">
-    <h5 class="card-title">Want to add deadlines to this endpoint?</h5>
+    <h5 class="card-title">You want to contribute or need the code of this endpoint?</h5>
     <p class="card-text">Make PullRequests to <a href="https://github.com/DeadlineAPI/Endpoint">https://github.com/DeadlineAPI/Endpoint</a>.</p>
-
   </div>
 </div>
+
 </body>
 </html>
